--- a/src/Laraue.EfCoreTriggers.SqlServer/Laraue.EfCoreTriggers.SqlServer.csproj
+++ b/src/Laraue.EfCoreTriggers.SqlServer/Laraue.EfCoreTriggers.SqlServer.csproj
@@ -3,14 +3,15 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <Description>Generating native SqlServer triggers through migrations using EFCore entity builder.</Description>
-    <RepositoryUrl>https://github.com/win7user10/Laraue.EfCoreTriggers</RepositoryUrl>
+    <RepositoryUrl>https://github.com/zirou5055/Laraue.EfCoreTriggers.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <Authors>Belyanskiy Ilya</Authors>
+    <Authors>Belyanskiy Ilya, zirou</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
-    <PackageProjectUrl>https://github.com/win7user10/Laraue.EfCoreTriggers</PackageProjectUrl>
+    <Version>1.0.1-alpah.2</Version>
+    <PackageProjectUrl>https://github.com/zirou5055/Laraue.EfCoreTriggers</PackageProjectUrl>
     <PackageTags>Entity Framework Core;entity-framework-core;ef;efcore;triggers;sql;SqlServer</PackageTags>
     <LangVersion>Latest</LangVersion>
+    <PackageId>Zirou.EfCoreTriggers.SqlServer</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
